refactor: formatted로 수정