@@ -49,7 +49,7 @@ public class ParliamentaryTable {
 
     private void validate(String name, int duration) {
         if (name.isEmpty() || name.length() > NAME_MAX_LENGTH) {
-            throw new IllegalArgumentException(String.format("테이블 이름은 1자 이상 %d자 이하여야 합니다", NAME_MAX_LENGTH));
+            throw new IllegalArgumentException("테이블 이름은 1자 이상 %d자 이하여야 합니다".formatted(NAME_MAX_LENGTH));
         }
         if (!name.matches(NAME_REGEX)) {
             throw new IllegalArgumentException("테이블 이름은 영문/한글만 가능합니다");
