@@ -16,7 +16,7 @@ class MemberTest {
         void 닉네임은_정해진_길이_이내여야_한다(int length) {
             assertThatThrownBy(() -> new Member("f".repeat(length)))
                     .isInstanceOf(IllegalArgumentException.class)
-                    .hasMessage(String.format("닉네임은 1자 이상 %d자 이하여야 합니다", Member.NICKNAME_MAX_LENGTH));
+                    .hasMessage("닉네임은 1자 이상 %d자 이하여야 합니다".formatted(Member.NICKNAME_MAX_LENGTH));
         }
 
         @ParameterizedTest
